src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&family=Poppins:wght@400;600;700&display=swap');

* {
  font-family: 'Montserrat', sans-serif;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  transition: 400ms;
}

body{
  background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
}

h1{
  padding: 0 0 0 10%;
  transition: 400ms;
  text-align: left;
  margin: 40px 0 45px;
}

h2{
  padding: 0 0 0 10%;
  transition: 400ms;
  text-align: left;
  line-height: 2.5rem;
  position: relative;
  margin-bottom: 50px;
}

h3{
  padding: 0 0 0 10%;
  transition: 400ms;
  text-align: left;
  line-height: 2.5rem;
  position: relative;
  margin-bottom: 50px;
}

h4 {
  padding: 0 0 0 10%;
  transition: 400ms;
  text-align: left;
  line-height: 2.5rem;
  position: relative;
  margin-bottom: 50px;
  font-size: 5rem;
}

nav{
  padding: 0 10% 0;
  margin-top: 80px;
  flex-wrap: nowrap;
  transition: 400ms;
}

footer {
  width: 100%;
  position: fixed;
  text-align: center;
  bottom: 0;
  margin-bottom: 30px;
}

ul{
  transition: 400ms;
  display: flex;
  flex-direction: row;
  list-style: none;
  position: absolute;
  top: 80px;
  right: 125px;
}

li{
  margin: 0 60px 0 40px;
  font-weight: 500;
  font-size: 1.2rem;
  transition: 400ms;
}

p{
  padding: 0 0 0 10%;
  transition: 400ms;
  text-align: left;
  line-height: 1.7rem;
  position: relative;
  margin-bottom: 60px;
  line-height: 2rem;
  font-weight: 500;
}

span{
  font-size: 3rem;
  line-height: 0.6rem;
}

.home-div{
  margin-top: 170px;
}

.home-div h1{
  font-size: 5rem;
  line-height: 3rem;
}

.link{
  transition: 400ms;
  padding: 7px;
  border-radius: 50px;
}

.portfolio-top {
  display: flex;
}

.portfolio-top-content {
  margin-right: 373px;
  margin-left: 90px;
}

.webdev-img {
  width: 300px;
  padding-top: 100px;
}

.cards{
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.card-row {
  transition: 400ms;
}

.logo{
  width: 230px;
  position: relative;
  bottom: 20px;
}

.theme-button{
  position: relative;
  bottom: 5px;
  cursor: pointer;
  background: none;
  border-style: none;
  padding: 7px;
  border-radius: 15px;
  transition: 400ms;
}

.portfolio-cards{
  transition: 400ms;
  margin: 80px 0 80px;
  width: 390px;
  resize: none;
  text-align: center;
  border-radius: 10px;
  border-style: solid;
  border-width: 2px;
  box-shadow: 0 1px 10px rgb(0, 0, 0);
}

.portfolio-cards:hover {
  scale: 1.05;
}

.portfolio-cards img{
  transition: 400ms;
  margin: 20px 0 0 0;
  width: 350px;
  border-radius: 10px;
  border-style: solid;
  border-width: 10px;
}

.portfolio-cards p{
  margin: 10px 15px 10px;
  transition: 400ms;
}

.code-link{
  transition: 400ms;
  position: relative;
  text-decoration: none;
}

.toggle-button{
  width: 40px;
  height: 40px;
  display: none;
  background: none;
  cursor: pointer;
  border-style: none;
}

/* LIGHT THEME */
#light h1{
  color: #2155cd;
}

#light h2{
  color: black;
}

#light h3{
  color: black;
}

#light footer{
  color: black;
}

#light p{
  color: black;
}

#light .home-h1 {
  color: #0aa1dd;
}

#light .menu-icon{
  color: rgb(102, 102, 102);
}

#light .theme-button:hover{
  background-color: rgba(155, 155, 155, 0.2);
}

#light .link{
  color: rgb(102, 102, 102);
}

#light .link:hover{
  background-color: rgba(155, 155, 155, 0.2);
}

#light .code-link{
  color: #2155cd;
}

#light .card-row{
  background-color: #2155cd;
  width: 100%;
}

#light .card-row-middle {
  background-color: #79DAE8;
}

#light .portfolio-cards{
  background-color: #0aa1dd;
  border-color: #2155cd;
 }

#light .portfolio-cards img{
  border-color: #2155cd;
}

#light .portfolio-cards p{
  color: white;
}

/* DARK THEME  */
.theBody{
 background-color: rgb(0, 0, 0);
}

#dark h1 {
  color: #cd3c21;
}

#dark h2{
  color: white;
}

#dark h3{
  color: white;
}

#dark footer {
  color: white;
}

#dark p{
  color: white;
}

#dark .home-h1 {
  color: #ed9a03;
}

#dark .menu-icon{
  color: rgb(255, 255, 255);
}

#dark .theme-button:hover{
  background-color: rgba(255, 255, 255, 0.2);
}

#dark .link{
  color: rgb(255, 255, 255)
}

#dark .link:hover{
  background-color: rgba(255, 255, 255, 0.2);
}

#dark .code-link{
  color: #cd3c21;
}

#dark .portfolio-cards{
  box-shadow: 0 1px 10px rgb(107, 107, 107);
  background-color: #ed9a03;
  border-color: #cd3c21;
}

#dark .portfolio-cards img{
  border-color: #cd3c21;
}

#dark .portfolio-cards p{
  color: black;
}

@media (max-width: 1725px) {
  .webdev-img {
    display: none;
  }
}

@media (max-width: 1365px){
  
  h1{
    margin-top: 100px;
    padding-left: 5px;
  }

  h2{
    margin-right: 40px;
    padding-left: 5px;
  }

  h3{
    margin-right: 40px;
    padding-left: 5px;
  }

  p{
    margin-right: 40px;
    padding-left: 5px;
  }

  ul{
    flex-direction: column;
    display: none;
  }

  nav{
    padding: 0;
  }

  li{
    margin: 10px -95px 10px 0;
    text-align: right;
    position: relative;
    top: 35px;
  }

  .home-div{
    text-align: left;
    margin: 30px 0 0 40px;
  }

  .home-div h1{
    line-height: 6rem;
    margin-top: 3px;
  }

  .home-div h3{
    margin-bottom: 0px;
  }

  .home-div h4{
    padding: 0px;
    line-height: 6rem;
  }

  .logo{
    margin-left: 45px;
  }

  .on-screen {
    display: flex;
    animation: 400ms slide-up;
  }

  .off-screen{
    display: flex;
    animation: 400ms disappear;
    animation-fill-mode: forwards;
  }

  .off-screen-display-none{
    display: none;
  }

  .toggle-button{
    display: block;
    position: absolute;
    top: 80px;
    right: 26px;
  }

  .webdev-img {
  display: none;
  }

  .portfolio-top{
  display: block;
  }

  .portfolio-top-content {
  margin: 0 40px;
  }

  @keyframes slide-up {
    from {
      opacity: 0;
      transform: translateY(210%);
    }
    to {
      opacity: 1;
      transform: translateY(0%);
    }
  }
  
  @keyframes disappear {
    from {
      opacity: 1;
      transform: translateY(0%);
    }
    to {
      transform: translateY(210%);
      opacity: 0;
      visibility: hidden;
    }
  }
}

